<resources>
    <string name="app_name">KotlinBeginnerCodes</string>
    <string name="submit_text">Submit Text</string>
    <string name="sample_text">Sample Text</string>
    <string name="start_counting">Click to Start Counting</string>
    <string name="new_activity">New Activity</string>
    <string name="launch_notification">Launch_Notification</string>
    <string name="simple_notification">Simple Notification</string>
    <string name="heads_up_notification">Heads Up Notification</string>
    <string name="replay_notification">Replay Notification</string>
    <string name="progress_notification">Progress Notification</string>
    <string name="enter_some_text">Enter Some Text</string>
    <string name="send_data">Send Data</string>
    <string name="sender_fragment">Sender Fragment</string>
    <string name="receiver_fragment">Receiver Fragment</string>
    <string name="status">Status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_text_view">Sample Text View</string>
    <string name="access_url_whatsapp_dialer">Access URL|WhatsApp|Dialer</string>
    <string name="show">show</string>
    <string name="enter_password">Enter Password</string>

    <string name="sample_description">Sample Description</string>
    <string name="sample_title">Sample Title</string>
    <string name="currently_on">Currently ON</string>
    <string name="currently_off">Currently OFF</string>
    <string name="bulb_on">Light Bulb is Turned ON</string>
    <string name="bulb_off">Light Bulb is Turned OFF</string>
    <string name="switch_off">Switch is Turned OFF</string>
    <string name="switch_on">Switch is Turned ON</string>
    <string name="fan_off">Fan is Turned OFF</string>
    <string name="fan_on">Fan is Turned ON</string>
    <string name="lock_off">Door Lock is Open</string>
    <string name="lock_on">Door Lock is Close</string>
    <string name="show_popup_menu">Show Popup Menu</string>
</resources>
