<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sender_fragment"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/id_sender_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_some_text" />
        <Button
            android:id="@+id/id_sender_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_data"
            />

    </LinearLayout>

</RelativeLayout>